# VulkanEngine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  envWindowsExample.cmake  first_app.cpp  first_app.hpp  headless.cpp  headless.hpp  imgui.ini  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  mingwBuild.bat  movement_controller.hpp  simple_render_system.cpp  simple_render_system.hpp  unixBuild.sh  ve_buffer.cpp  ve_camera.cpp  ve_camera.hpp  ve_descriptors.cpp  ve_device.cpp  ve_device.hpp  ve_frame_info.hpp  ve_game_object.cpp  ve_game_object.hpp  ve_model.cpp  ve_model.hpp  ve_pipeline.cpp  ve_pipeline.hpp  ve_renderer.cpp  ve_renderer.hpp  ve_swap_chain.cpp  ve_swap_chain.hpp  ve_window.cpp  ve_window.hpp
.cache/clangd/index/: camera_controller.cpp.0609093033B84A94.idx  camera_controller.hpp.DDA40B3DA071B820.idx  first_app.cpp.3EBF49DC19B6E14B.idx  first_app.hpp.460DE562BF4F24A3.idx  imconfig.h.A15B410853E3E3F1.idx  imgui.cpp.A3EE10E6EEE8BD51.idx  imgui.h.327B737808E79E27.idx  imgui_demo.cpp.952A9E1907C59007.idx  imgui_draw.cpp.A74B9B79E7A0FE50.idx  imgui_impl_glfw.cpp.8330A026BD7E988B.idx  imgui_impl_glfw.h.FD67B50901FD1403.idx  imgui_impl_vulkan.cpp.FCA08AA4BFA1E511.idx  imgui_impl_vulkan.h.A5FF3A7E043FC253.idx  imgui_internal.h.185D0B73190EB982.idx  imgui_tables.cpp.24E3150776C042C6.idx  imgui_widgets.cpp.B1CDC81D37AC6633.idx  imstb_rectpack.h.75A1377A25C0D2F5.idx  imstb_textedit.h.ED757B76C51EA491.idx  imstb_truetype.h.F306F220B74CB9D9.idx  main.cpp.745892FAF16E6A50.idx  movement_controller.cpp.C57EE0F8D73019DD.idx  movement_controller.hpp.B47DF2943EAA15AE.idx  point_light_system.cpp.F53D86E7C010928B.idx  point_light_system.hpp.2DBBD6FDFAAA9D92.idx  simple_render_system.cpp.7EC312B4D9B3E078.idx  simple_render_system.hpp.1847B828D4D1CAC3.idx  skybox_render_system.cpp.1843B06B84CFBDDA.idx  skybox_render_system.hpp.B9ECDB0BFC6E7A68.idx  stb_image.h.9797CFDB51016A76.idx  tiny_obj_loader.h.EAEADBA78BE42FD4.idx  ve_buffer.cpp.8E513D80076D29C2.idx  ve_buffer.hpp.789EE034B47DC99E.idx  ve_camera.cpp.76F5FCD4DAFE5CDE.idx  ve_camera.hpp.A331B992DF53F3FC.idx  ve_descriptors.cpp.10EBD2C49B410DA0.idx  ve_descriptors.hpp.5837A2DF5B55D9F5.idx  ve_device.cpp.A214A15F7355C739.idx  ve_device.hpp.34A614F820D0D508.idx  ve_frame_info.hpp.89662F2F41D7DE14.idx  ve_game_object.cpp.7B1CD5B2B386859C.idx  (+20 more)
assets/shaders/: lit_mat.frag  lit_mat.frag.spv  lit_mat.vert  lit_mat.vert.spv  pbr.frag  pbr.frag.spv  pbr.vert.spv  point_light.frag.spv  point_light.vert  point_light.vert.spv  skybox.frag  skybox.vert  textured_lit_mat.frag  textured_lit_mat.frag.spv  textured_lit_mat.vert.spv
models/lost_empire/: lost_empire.mtl
shaders/: lit_mat.frag  pbr.frag  pbr.vert  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert  textured_lit_mat.vert
src/: camera_controller.cpp  camera_controller.hpp  first_app.cpp  first_app.hpp  movement_controller.cpp  simple_render_system.cpp  simple_render_system.hpp  ve_buffer.cpp  ve_buffer.hpp  ve_camera.cpp  ve_camera.hpp  ve_descriptors.cpp  ve_descriptors.hpp  ve_device.cpp  ve_device.hpp  ve_game_object.cpp  ve_game_object.hpp  ve_input.cpp  ve_input.h  ve_input.hpp  ve_model.cpp  ve_model.hpp  ve_pipeline.cpp  ve_pipeline.hpp  ve_renderer.cpp  ve_renderer.hpp  ve_swap_chain.cpp  ve_swap_chain.hpp  ve_texture.cpp  ve_texture.hpp  ve_window.cpp  ve_window.hpp
src/Core/: camera_controller.cpp  camera_controller.hpp  movement_controller.hpp  ve_camera.cpp  ve_camera.hpp  ve_frame_info.hpp  ve_game_object.hpp  ve_input.hpp  ve_material.cpp  ve_material.hpp  ve_model.cpp  ve_model.hpp  ve_utils.hpp  ve_window.cpp  ve_window.hpp
src/ImGui/: ve_imgui.cpp  ve_imgui.h
src/Renderer/: ve_buffer.cpp  ve_buffer.hpp  ve_device.cpp  ve_device.hpp  ve_pipeline.cpp  ve_pipeline.hpp  ve_renderer.cpp  ve_renderer.hpp  ve_swap_chain.cpp  ve_texture.cpp  ve_texture.hpp
src/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp  skybox_render_system.cpp  skybox_render_system.hpp
